--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -161,23 +161,35 @@
 		this.survey = survey
 	}
 	
-	var friends = [];
-
 	// On submit, create a new user
 	$("#submit").on("click", function(event) {
+
 	    event.preventDefault();
+
 	    // Convert survey results into a simple array of numbers 
 	    var survey = [];
 		$('#form').find('select').each(function(){
 			var answer = $(this).val();
 			survey.push(parseInt(answer));
 		});
+
 		// save text inputs
 		var name = $("#name").val();
 		var photo = $("#imageLink").val();
-		// create new user and push to array of friends
-		friends.push(new user(name, photo, survey));
-		console.log(friends);
+
+		// create new user
+		var newUser = new user(name, photo, survey);
+
+		// send the object to the friends data
+		$.post("/api/friends", newUser, function(data) {
+			if (data) {
+				alert("new user added");
+			}
+        });
+
+        // Clear the form after submitting
+        clearForm();
+        resetMaterial();
 	});
 
 	var select = $('select');
@@ -185,15 +197,23 @@
 	// clear button will clear out the form
 	$("#clear").on("click", function(event) {
 		event.preventDefault();
+		clearForm();
+		resetMaterial();
+	});
+
+	function clearForm() {
 		// clear out the text input fields
 		$("form input").val("");
 		//Sets the first option in dropdown as selected
 	    select.prop('selectedIndex', 0);
 	    //Update material select
 	    select.material_select();		
-	});
+	}
 
-	select.material_select();
+	function resetMaterial() {
+		select.material_select();
+	}
+
 
 	function friendQuery() {
 		var currentURL = window.location.origin;
@@ -201,7 +221,7 @@
 			.done(function(friends) {
 
 				console.log("URL: " + "/api/friends");
-				console.log(friends);
+				
 		})
 	}
 
