--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Survey</title>
 	<!--Import Google Font Material Icons-->
-	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 	<!-- Compiled and minified CSS -->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
@@ -126,7 +126,7 @@
   <div id="modal1" class="modal">
     <div class="modal-content">
       <h4 id="displayUser"></h4>
-      <p id="displayMatch"></p>
+      <h2 id="displayMatch"></h2>
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
