--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Survey</title>
 	<!--Import Google Font Material Icons-->
-	<link href="fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 	<!-- Compiled and minified CSS -->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
